[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Spoint.gd" type="Script" id=1]
[ext_resource path="res://art/extra/NighBg.png" type="Texture" id=2]
[ext_resource path="res://font/kirby-classic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://art/sounds/Bg_dungeon_boss.ogg" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
resource_name = "blink"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.761719, 0.0981903, 0.0981903, 1 ), Color( 1, 1, 1, 1 ), Color( 0.0635223, 0.194235, 0.707031, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Spoint" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.0872803, 0.443168, 0.859375, 1 )
margin_top = 1.0
margin_right = 578.0
margin_bottom = 1022.0
rect_scale = Vector2( 1, 0.998228 )
texture = ExtResource( 2 )

[node name="easy" type="Button" parent="."]
margin_left = 143.0
margin_top = 294.0
margin_right = 417.0
margin_bottom = 405.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.988281, 0.972839, 0.972839, 1 )
text = "Easy"

[node name="Normal" type="Button" parent="."]
margin_left = 141.0
margin_top = 458.0
margin_right = 415.0
margin_bottom = 569.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.988281, 0.972839, 0.972839, 1 )
text = "Normal"

[node name="Hard" type="Button" parent="."]
margin_left = 134.0
margin_top = 638.0
margin_right = 408.0
margin_bottom = 749.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.988281, 0.972839, 0.972839, 1 )
text = "Hard"

[node name="2 Player" type="Button" parent="."]
margin_left = 130.0
margin_top = 796.0
margin_right = 404.0
margin_bottom = 907.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.988281, 0.972839, 0.972839, 1 )
text = "2 Player"

[node name="NetPlay" type="Button" parent="."]
margin_left = 144.805
margin_top = 63.8153
margin_right = 418.805
margin_bottom = 174.815
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0.988281, 0.972839, 0.972839, 1 )
text = "NetPlay"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "blink"
anims/blink = SubResource( 2 )

[node name="AudioPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -7.577
pitch_scale = 0.8

[connection signal="pressed" from="easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="Normal" to="." method="_on_Normal_pressed"]
[connection signal="pressed" from="Hard" to="." method="_on_Hard_pressed"]
[connection signal="pressed" from="2 Player" to="." method="_on_2_Player_pressed"]
[connection signal="pressed" from="NetPlay" to="." method="_on_NetPlay_pressed"]
